--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
     <div class = "div-a">
       <h1 class = "titletext">Daily Journal</h1>
-      <h2>September 12, 2019</h2>
+    </div>
+    <div class = "div-a">
+        <h2>September 12, 2019</h2>
     </div>
 </html>
