--- a/index.html
+++ b/index.html
@@ -7,4 +7,20 @@
       <h1 class = "titletext">Daily Journal</h1>
       <h2>September 12, 2019</h2>
     </div>
+    <h3 class= "list-title">To Do List</h3>
+        <ol class="list">
+            <li>Read Chapter 5</li>
+            <li>Cook Dinner</li>
+            <li>Mock-Up About<br> Page</li>
+            <li>Finish Blog Post</li>
+            <li>Go Shopping</li>
+              <ul>
+                  <li>Milk</li>
+                  <li style="color:white">Juice</li>
+                  <li>Egg</li>
+              </ul>
+            <li>Get some sleep</li>  
+        </ol>
+        
+    </div>
 </html>
